<resources>
    <string name="app_name">tarea-room</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Shop</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="register_fragment_label">Register Product</string>
    <string name="edit_fragment_label">Edit Product</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="deletes">Delete</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tocart">Add to cart</string>
    <string name="edit">Edit</string>
    <string name="price">0.0</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="camera">Choose From Camera</string>
    <string name="storage">Choose From Storage</string>
    <string name="gallery">Choose From Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>