<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterProduct" android:background="#424555">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="199dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="28dp"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.476" android:clickable="true" android:background="#FFFFFF"
            android:contentDescription="@string/camera"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/product_name2"
            android:autoText="false" android:clickable="true"
            android:enabled="true" android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:hint="Name" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/progressBar"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/brand2"
            android:textColor="#FFFFFF" android:enabled="true"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/product_name2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0" android:hint="Brand"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/price_txt2"
            android:hint="@string/price"
            android:enabled="true" android:textColor="#FFFFFF"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/brand2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.053"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="55dp" android:id="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/price_txt2"
            android:layout_marginEnd="68dp" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/btn_clear" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:textColor="#FFFFFF"/>
    <Button
            android:text="@string/clear"
            android:layout_width="0dp"
            android:layout_height="58dp" android:id="@+id/btn_clear"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/price_txt2"
            android:layout_marginTop="52dp" android:layout_marginStart="68dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toStartOf="@+id/btn_save" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:textColor="#FFFFFF"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>