<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:layout_margin="10dp"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   app:cardCornerRadius="8dp"
                                   android:minHeight="100dp"
                                   app:cardElevation="6dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_layout"
            android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="292dp"
                    android:layout_height="146dp" tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>
            <EditText
                    android:layout_width="346dp"
                    android:layout_height="59dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/product_name"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" android:autoText="false" android:clickable="false"
                    android:enabled="false" android:textColor="#0C0C0C" android:text="@string/next"/>
            <EditText
                    android:layout_width="352dp"
                    android:layout_height="53dp"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:ems="10"
                    android:id="@+id/brand"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/product_name"
                    android:layout_marginTop="16dp" android:textColor="#000000" android:enabled="false"/>
            <Button
                    android:text="@string/edit"
                    android:layout_width="0dp"
                    android:layout_height="56dp" android:id="@+id/btn_edit"
                    app:layout_constraintStart_toEndOf="@+id/price_txt"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btn_add"
                    android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/brand"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp" android:layout_marginStart="8dp"/>
            <Button
                    android:text="@string/tocart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btn_add"
                    app:layout_constraintStart_toEndOf="@+id/btn_edit" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="21dp"
                    app:layout_constraintTop_toBottomOf="@+id/brand" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"/>
            <EditText
                    android:layout_width="111dp"
                    android:layout_height="51dp"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/price_txt"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/btn_edit" android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/brand" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp" android:hint="@string/price"
                    app:layout_constraintVertical_bias="0.166" android:enabled="false" android:textColor="#000000"/>
        </androidx.constraintlayout.widget.ConstraintLayout
        >
    </LinearLayout>
</androidx.cardview.widget.CardView>